<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_background"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo_yellow"
        android:layout_width="66dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_phuza_logo_yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Welcome text -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:fontFamily="@font/sora_regular"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Title PHUZA -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PHUZA"
        android:fontFamily="@font/termina_test_black"
        android:textSize="48sp"
        android:textColor="@color/yellow"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Email label -->
    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/milk"
        android:fontFamily="@font/sora_regular"
        android:textSize="14sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/emailLayout" />

    <!-- Email field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorTextColor="@color/error_color"
        android:layout_marginTop="4dp"
        app:errorIconTint="@color/error_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/lavender"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="313dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:textColor="@color/milk"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/milk"
        android:fontFamily="@font/sora_regular"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"/>

    <!-- Password field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorTextColor="@color/error_color"
        android:layout_marginTop="4dp"
        app:errorIconTint="@color/error_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/lavender"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/lavender"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="313dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:paddingStart="12dp"
            android:paddingEnd="42dp"
            android:textColor="@color/milk"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Remember me + Forgot password -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRememberForgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout">

        <CheckBox
            android:id="@+id/checkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:buttonTint="@null"
            android:text="@string/remember_me"
            android:padding="8dp"
            app:buttonTint="@null"
            android:textColor="@color/milk"
            android:fontFamily="@font/sora_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/aquamarine"
            android:fontFamily="@font/sora_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:fontFamily="@font/sora_regular"
        android:textSize="18sp"
        android:letterSpacing="0.05"
        android:background="@drawable/btn_main_custom"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/clRememberForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Login with Google button -->
    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:fontFamily="@font/sora_regular"
        android:textSize="13sp"
        android:letterSpacing="0.05"
        android:background="@drawable/btn_google_custom"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Sign up link -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/milk"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/aquamarine"
            android:textStyle="bold"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
