<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_background"
    android:padding="32dp"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logo_yellow"
        android:layout_width="66dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_phuza_logo_yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/yellow"
        android:textSize="22sp"
        android:fontFamily="@font/sora_semibold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvHelper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_address"
        android:textColor="@color/milk"
        android:textSize="14sp"
        android:fontFamily="@font/sora_regular"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="313dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorTextColor="@color/error_color"
        android:layout_marginTop="12dp"
        app:errorIconTint="@color/error_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/lavender"
        app:layout_constraintTop_toBottomOf="@id/tvHelper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="313dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:textColor="@color/milk"
            android:textColorHint="@color/mist" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_main_custom"
        android:fontFamily="@font/sora_regular"
        android:letterSpacing="0.05"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/successCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:paddingTop="60dp"
            android:paddingBottom="60dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/recovery_msg"
            android:fontFamily="@font/termina_test_black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
