<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/ui_background"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_round_arrow_back_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:padding="8dp"
            app:tint="@color/milk" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="32sp"
            android:fontFamily="@font/termina_test_black"
            android:textColor="@color/yellow"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Account"
                android:fontFamily="@font/sora_semibold"
                android:textColor="@color/milk"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"/>

            <LinearLayout
                android:id="@+id/edit_avatar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/avatar_no_avatar"
                    android:contentDescription="@string/avatar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit picture/avatar"
                    android:fontFamily="@font/sora_semibold"
                    android:textColor="@color/milk"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnChooseAvatar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/choose_an_avatar"
                android:textAllCaps="false"
                android:textColor="@color/milk"
                android:fontFamily="@font/sora_semibold"
                android:textSize="18sp"
                android:letterSpacing="0.05"
                android:background="@drawable/btn_secondary_custom"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/btnUploadGallery"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/upload_from_gallery"
                android:textAllCaps="false"
                android:textColor="@color/milk"
                android:fontFamily="@font/sora_semibold"
                android:textSize="18sp"
                android:letterSpacing="0.05"
                android:background="@drawable/btn_secondary_custom"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:backgroundTint="@null"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:divider="@drawable/list_divider_settings"
                android:showDividers="middle|beginning|end">

<!--                <include layout="@layout/settings_list_item" android:id="@+id/settings_change_location"/>-->
                <include layout="@layout/settings_list_item" android:id="@+id/settings_change_password"/>
<!--                <include layout="@layout/settings_list_item" android:id="@+id/settings_notification_prefs"/>-->
<!--                <include layout="@layout/settings_list_item" android:id="@+id/settings_language_prefs"/>-->
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>